[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/DynamicWidgets.gd" type="Script" id=1]
[ext_resource path="res://assets/UI_theme.tres" type="Theme" id=2]

[node name="DynamicWidgets" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.1272
margin_right = -7.1272
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_paths = [ "res://widgets/BasicWidget.tscn", "res://widgets/DiceTrackerWidget.tscn", "res://widgets/BannerWidget.tscn", "res://widgets/SpellSlotWidget.tscn", "res://widgets/HealthPointsTrackerWidget.tscn" ]

[node name="PopupResize" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.0
margin_top = -200.0
margin_right = 297.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="PopupResize"]
margin_left = 10.0
margin_top = 15.0
margin_right = 586.0
margin_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox1" type="HBoxContainer" parent="PopupResize/VBox"]
margin_right = 628.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupResize/VBox/HBox1"]
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Width"
valign = 1

[node name="Width" type="SpinBox" parent="PopupResize/VBox/HBox1"]
margin_left = 204.0
margin_right = 628.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme = ExtResource( 2 )
min_value = 1.0
max_value = 5.0
value = 1.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox2" type="HBoxContainer" parent="PopupResize/VBox"]
margin_top = 124.0
margin_right = 628.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupResize/VBox/HBox2"]
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Height"
valign = 1

[node name="Height" type="SpinBox" parent="PopupResize/VBox/HBox2"]
margin_left = 204.0
margin_right = 628.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme = ExtResource( 2 )
min_value = 1.0
max_value = 5.0
value = 1.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupResize_Submit" type="Button" parent="PopupResize/VBox"]
margin_top = 248.0
margin_right = 628.0
margin_bottom = 370.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Submit"

[node name="PopupAddWidget" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.5
margin_top = -79.0
margin_right = 197.5
margin_bottom = 79.0
rect_min_size = Vector2( 0, 300 )

[node name="Box" type="VBoxContainer" parent="PopupAddWidget"]
margin_left = 10.0
margin_top = 15.0
margin_right = 385.0
margin_bottom = 285.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnBasicWidget" type="Button" parent="PopupAddWidget/Box"]
visible = false
margin_right = 375.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Basic"

[node name="BtnSpellSlotWidget" type="Button" parent="PopupAddWidget/Box"]
visible = false
margin_top = 137.0
margin_right = 375.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Spell Slots"

[node name="BtnDiceTrackerWidget" type="Button" parent="PopupAddWidget/Box"]
visible = false
margin_top = 137.0
margin_right = 375.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dice Tracker"

[node name="BtnHealthPointsTrackerWidget" type="Button" parent="PopupAddWidget/Box"]
visible = false
margin_top = 137.0
margin_right = 375.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Health Point Tracker"
[connection signal="pressed" from="PopupResize/VBox/PopupResize_Submit" to="." method="_on_PopupResize_Submit_pressed"]
[connection signal="pressed" from="PopupAddWidget/Box/BtnBasicWidget" to="." method="_on_BtnBasicWidget_pressed"]
[connection signal="pressed" from="PopupAddWidget/Box/BtnSpellSlotWidget" to="." method="_on_BtnSpellSlotWidget_pressed"]
[connection signal="pressed" from="PopupAddWidget/Box/BtnDiceTrackerWidget" to="." method="_on_BtnDiceTrackerWidget_pressed"]
[connection signal="pressed" from="PopupAddWidget/Box/BtnHealthPointsTrackerWidget" to="." method="_on_BtnDiceTrackerWidget_pressed"]
